--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "pera-react-final",
+  "name": "life",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://pera2024.org/",
   "dependencies": {
     "@emotion/styled": "^11.13.0",
     "@mui/lab": "^6.0.0-beta.10",
