--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "life",
+  "name": "Life",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://aaditya0112.github.io/",
+  "homepage" : "https://aaditya0112.github.io/Life",
   "dependencies": {
     "@emotion/styled": "^11.13.0",
     "@mui/lab": "^6.0.0-beta.10",
