--- a/2024/package.json
+++ b/2024/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Life",
+  "name": "2024",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://aaditya0112.github.io/Life/2024",
+  "homepage" : "https://aaditya0112.github.io/2024",
   "dependencies": {
     "@emotion/styled": "^11.13.0",
     "@mui/lab": "^6.0.0-beta.10",
