--- a/2024/package.json
+++ b/2024/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2024",
+  "name": "Life",
   "version": "0.1.0",
   "private": true,
   "homepage" : "https://aaditya0112.github.io/2024",
