--- a/2024/package.json
+++ b/2024/package.json
@@ -2,7 +2,7 @@
   "name": "Life",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://gev-life.org",
+  "homepage" : "https://gev-life.org/2024/",
   "dependencies": {
     "@emotion/styled": "^11.13.0",
     "@mui/lab": "^6.0.0-beta.10",
