--- a/2024/package.json
+++ b/2024/package.json
@@ -2,7 +2,7 @@
   "name": "Life",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://gev-life.org/2024/",
+  "homepage": "https://gev-life.org/",
   "dependencies": {
     "@emotion/styled": "^11.13.0",
     "@mui/lab": "^6.0.0-beta.10",
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
     "scrollreveal": "^4.0.9",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
